[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gardian-reranker"
version = "0.1.0"
description = "Query-adaptive sparse/dense/KG reranker for RAG systems."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "GARDIAN Team" }
]
keywords = ["rag", "reranking", "information-retrieval", "medical-ai", "knowledge-graph"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "torch>=2.1.0",
  "numpy>=1.26.0"
]

[project.urls]
Homepage = "https://github.com/Abderraouf-Naji/gardian-reranker"
Repository = "https://github.com/Abderraouf-Naji/gardian-reranker"
Issues = "https://github.com/Abderraouf-Naji/gardian-reranker/issues"

[project.scripts]
gardian-rerank = "gardian_reranker.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["gardian_reranker*"]
